# printer-turbo

./: .gitignore  CLAUDE.md  Dockerfile.fastapi  INTEGRATION.md  README.md  config.example.toml  config.toml  debug_llm_raw.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  test_llm_manual.py  test_material_manual.py  test_pipeline_manual.py  test_video_manual.py  test_voice_manual.py
.claude/: settings.json
app/: asgi.py
app/config/: config.py
app/controllers/manager/: task_manager.py
app/controllers/v1/: video.py
app/models/: const.py  schema.py
app/services/: llm.py  material.py  state.py  subtitle.py  task.py  video.py  voice.py
app/utils/: file_security.py  utils.py
backend/: .env.example  DATABASE.md  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.ts
backend/src/common/: crypto.util.ts  enums.ts
backend/src/config/: configuration.ts
backend/src/database/: data-source.ts
docs/: TONG-QUAN-VA-LOGIC.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/constants/: mock.ts  platforms.ts  statuses.ts
frontend/src/lib/: api.ts  cn.ts  format.ts  session.ts  useAuth.tsx  useChannels.tsx  useOAuthResult.ts  useTheme.ts
frontend/src/pages/: AnalyticsPage.tsx  CalendarPage.tsx  ContentPage.tsx  DashboardPage.tsx  LoginPage.tsx  PostEditorPage.tsx  SettingsPage.tsx  VideosListPage.tsx
(+84 files in other folders)
