[project]
name = "printer-turbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "tomli>=2.4.1",
    "tomli-w>=1.2.0",
    "edge-tts>=7.0.0",
    "httpx>=0.28.0",
    "moviepy>=2.2.1",
    "pysrt>=1.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
